--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "run:permissions": "ts-node src/Permission.ts"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/pg": "^8.6.6",
     "ts-node": "^10.9.1",
     "tsc": "^2.0.4",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "@casl/ability": "^6.3.3",
+    "express": "^4.18.2",
     "pg": "^8.10.0"
   }
 }
